--- a/04.01.19/homework/css/main.css
+++ b/04.01.19/homework/css/main.css
@@ -90,7 +90,7 @@ body {
     display: block;
 }
 
-.content__area {
+.person-info {
     display: none;
 
     /* border-style: solid;
@@ -109,7 +109,7 @@ body {
     text-decoration: none;
 }
 
-.content__area--visibility {
+.person-info--visibility {
     display: block;
 }
 
@@ -126,7 +126,7 @@ body {
     text-decoration: none;
 }
 
-.article__content_name {
+.person-info__name {
     text-decoration: none;
     text-transform: uppercase;
     margin: 0em 0em 0em 0.5em;
@@ -140,7 +140,7 @@ body {
      width: 270px;
 }
 
-.article__content_surname {
+.person-info__surname {
     text-decoration: none;
     text-transform: uppercase;
     margin: 0em 0em 0em 0.5em;
@@ -154,7 +154,7 @@ body {
      width: 270px;
 }
 
-.article__content_age {
+.person-info__age {
     text-decoration: none;
     text-transform: uppercase;
     margin: 0em 0em 0em 0.5em;
@@ -168,7 +168,7 @@ body {
      width: 270px;
 }
 
-.article__content_sex {
+.person-info__sex {
     text-decoration: none;
     text-transform: uppercase;
     margin: 0em 0em 0em 0.5em;
