--- a/04.01.19/homework/css/main.css
+++ b/04.01.19/homework/css/main.css
@@ -113,7 +113,7 @@ body {
     display: block;
 }
 
-.article__titles {
+.person-info__field {
     margin: 1.2em 0em 0.5em 0.7em;
     padding: 0em 0em 0em 0.5em;
     text-align: left;
