--- a/04.01.19/homework/css/main.css
+++ b/04.01.19/homework/css/main.css
@@ -36,7 +36,12 @@ body {
 }
 
 .form__elements-label {
-    width: 70px;
+
+    /* border-color: #d19292;
+    border-style: dotted;
+    border-width: thin; */
+
+    width: 100px;
     display: inline-block;                  
 }
 
@@ -55,7 +60,7 @@ body {
     letter-spacing: 1.3px;
     text-decoration: none;
     opacity: 1;
-   width: 270px;
+    width: 270px;
     text-align: center;
     border-radius: 2px;
 }
@@ -75,6 +80,38 @@ body {
 
 .input__field:hover {
     background-color: #4095c6;
+}
+
+.input__field--small {
+    text-decoration: none;
+    text-transform: uppercase;
+    margin: 0em 0em 0em 0.5em;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    border-radius: 0.1em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #FFFFFF;
+    background-color: #4eb5f1;
+    text-align: left;
+    width: 36px;
+}
+
+.form__elements-amount {
+    display: none;
+    margin: 1.2em 0em 0.5em 0.7em;
+    padding: 0em 0em 0em 0em;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    text-decoration: none;
+}
+
+.form__elements-amount--visibility {
+    display: inline-block;
 }
 
 .main__title {
