--- a/04.01.19/homework/css/main.css
+++ b/04.01.19/homework/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color:rgb(177, 177, 177);
+    background-color: rgb(177, 177, 177);
 }
 
 .contentwrap {
@@ -42,7 +42,7 @@ body {
     border-width: thin; */
 
     width: 100px;
-    display: inline-block;                  
+    display: inline-block;
 }
 
 .button:hover {
@@ -98,6 +98,19 @@ body {
 
 .form__elements-amount {
     display: none;
+    margin: 1.2em 0em 0.5em 0.7em;
+    padding: 0em 0em 0em 0em;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    text-decoration: none;
+}
+
+.form__elements-child {
     margin: 1.2em 0em 0.5em 0.7em;
     padding: 0em 0em 0em 0em;
     text-align: left;
