--- a/04.01.19/homework/css/main.css
+++ b/04.01.19/homework/css/main.css
@@ -65,6 +65,40 @@ body {
     border-radius: 2px;
 }
 
+.button_show {
+    display: none;
+    margin: 2em 0em 0em 0em;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    background-color: #4eb5f1;
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1.3px;
+    text-decoration: none;
+    opacity: 1;
+    width: 270px;
+    text-align: center;
+    border-radius: 2px;
+}
+
+.button_show--visibility {
+    display: inline-block;
+    margin: 2em 0em 0em 0em;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    background-color: #4eb5f1;
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1.3px;
+    text-decoration: none;
+    opacity: 1;
+    width: 270px;
+    text-align: center;
+    border-radius: 2px;
+}
+
 .input__field {
     text-decoration: none;
     text-transform: uppercase;
