--- a/04.01.19/homework/css/main.css
+++ b/04.01.19/homework/css/main.css
@@ -144,6 +144,19 @@ body {
     text-decoration: none;
 }
 
+.form__elements-child-wrapper {
+    margin: 1.2em 0em 0.5em 0.7em;
+    padding: 0em 0em 0em 0em;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    text-decoration: none;
+}
+
 .form__elements-child {
     margin: 1.2em 0em 0.5em 0.7em;
     padding: 0em 0em 0em 0em;
