--- a/04.18.19/homework/weather/css/css.css
+++ b/04.18.19/homework/weather/css/css.css
@@ -440,7 +440,9 @@
 	display: none;
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-around;
+    justify-content: space-around;
+    
+    flex-wrap: wrap;
 
 	width: 572px;
 	height: auto;
