--- a/04.18.19/homework/weather/css/css.css
+++ b/04.18.19/homework/weather/css/css.css
@@ -6,7 +6,10 @@ canvas {
 }
 
 .contentwrap {
-    /*	background-color: khaki;*/
+    /*     
+    border-color: blueviolet;
+    border-style: solid;
+    border-width: 01px; */
 }
 
 .contentwrap:after {
@@ -18,12 +21,17 @@ canvas {
 }
 
 .form {
-    margin: 0 0 2em 0;
+    display: flex;
+    flex-direction: row;
     visibility: visible;
+
+    /* border: coral;
+    border-color: crimson;
+    border-style: solid;
+    border-width: 01px; */
 }
 
 .form--hidden {
-    /*    margin: 0 0 2em 0;*/
     height: 0;
     visibility: hidden;
 }
@@ -44,62 +52,6 @@ canvas {
     display: inline-block;
 }
 
-.button:hover {
-    background-color: #000;
-}
-
-.button {
-    margin: 2em 0em 0em 0em;
-    padding: 0.5em 0.5em 0.5em 0.5em;
-
-    color: #fff;
-    font-size: .75em;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 0.125em;
-    text-decoration: none;
-    opacity: 1;
-    width: 270px;
-    text-align: center;
-    border-radius: 2px;
-
-    background-color: #4eb5f1;
-}
-
-.button_show {
-    display: none;
-    margin: 2em 0em 0em 0em;
-    padding: 0.5em 0.5em 0.5em 0.5em;
-    background-color: #4eb5f1;
-    color: #fff;
-    font-size: .75em;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 0.125em;
-    text-decoration: none;
-    opacity: 1;
-    width: 270px;
-    text-align: center;
-    border-radius: 2px;
-}
-
-.button_show--visible {
-    display: block;
-    margin: 2em 0em 0em 0em;
-    padding: 0.5em 0.5em 0.5em 0.5em;
-    background-color: #4eb5f1;
-    color: #fff;
-    font-size: .75em;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 0.125em;
-    text-decoration: none;
-    opacity: 1;
-    width: 270px;
-    text-align: center;
-    border-radius: 2px;
-}
-
 .input__input {
     padding: 8px;
     display: block;
@@ -112,9 +64,9 @@ canvas {
     text-decoration: none;
     text-transform: uppercase;
     /*
-    margin: 0em 0em 0em 0.5em;
+    margin: 0em 0em 0em 0.5em; */
     padding: 0.5em 0.5em 0.5em 0.5em;
-*/
+
     border-radius: 0.1em;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -182,6 +134,103 @@ canvas {
     display: inline-block;
 }
 
+div {
+    font-family: helvetica,arial,sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.button {
+    cursor: pointer;
+    background-color: white;
+    border: 1px solid #1e5372;
+    border-radius: 10%;
+    font-size: 1em;
+    margin: 0em 0em 0em .3em;
+}
+
+.button:hover {
+    background-color: #4095c6;
+    color: #FFFFFF;
+    border-radius: 10%;
+    border: 1px solid #ffffff;
+}
+
+#menu-cities {
+    margin-top: 2px;
+    position: absolute;
+    background: #fff;
+    z-index: 9900;
+    /* width: 212px; */
+}
+
+#menu-cities ul.menu-items li.title {
+
+    color: #00afbe;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    border-top: 1px solid #eae9e8;
+    position: relative;
+    padding: 10px;
+    border-bottom: none;
+}
+
+#menu-cities ul.menu-items li a {
+
+    display: block;
+    color: #141d26;
+    padding: 12px;
+        padding-right: 12px;
+    padding-right: 75px;
+    position: relative;
+}
+
+a {
+    text-decoration: none;
+}
+
+a, li, p, small, span, time, ul {
+    font-size: 1em;
+    margin: 0;
+    padding: 0;
+}
+
+a, div, h1, h2, h3, h4, h5, input, li, p, small, span, time, ul {
+    font-family: helvetica,arial,sans-serif;
+}
+
+*, ::after, ::before {
+    box-sizing: inherit;
+}
+
+ol, ul {
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#menu-cities ul.menu-items {
+
+    border: 1px solid #c8c8c8;
+}
+
+#menu-cities ul.menu-items li {
+    border-bottom: 1px solid #eae9e8;
+    padding: 0;
+}
+
+li:hover {
+
+    background-color: #d2e4ee;
+}
+
+a:focus, a:hover {
+    cursor: pointer;
+    text-decoration: none !important;
+}
+
 .main__title {
     display: none;
     /*
@@ -223,9 +272,7 @@ canvas {
 }
 
 .city-info__field {
-
     margin: 0.8em 0em 0.1em 0em;
-
     text-align: left;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -324,234 +371,234 @@ canvas {
     color: #FFFFFF;
     background-color: #4eb5f1;
     text-align: left;
-
 }
 
 .container {
-	width: 588px;
-	margin-left: auto;
-	margin-right: auto;
-
-	border-bottom-width: 0px;
-	padding-left: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
+    width: 588px;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom-width: 0px;
+    padding-left: 0px;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
 }
 
 .noDisplay {
-	display: none;
+    display: none;
 }
 
 .flex-wrapper {
-	display: flex;
-	flex-direction: row;
-	align-items: stretch;
-
-	width: 588px;
-	height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    width: 588px;
+    height: auto;
 }
 
 .flex_item_left_side {
-	width: 70px;
-	height: 100%;
+    width: 70px;
+    height: 100%;
 }
 
 .flex_item_right_side {
-	width: 70px;
-	height: 768px;
+    width: 70px;
+    height: 768px;
 }
 
 .flex_item_white {
-	width: 8px;
-	background-color: #FFFFFF;
+    width: 8px;
+    background-color: #FFFFFF;
 }
 
 .flex_item_text_box_white {
-	width: 572px;
-	height: 8px;
-	max-height: 100%;
-	background-color: #FFFFFF;
+    width: 572px;
+    height: 8px;
+    max-height: 100%;
+    background-color: #FFFFFF;
 }
 
 .flex_item_middle {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-
-	width: 572px;
-	height: 100%;
-
-	background-color: #7fc1ff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 572px;
+    height: 100%;
+    background-color: #7fc1ff;
 }
 
 .flex_item {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
-	justify-content: flex-start;
-
-	width: 100%;
-	height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    height: auto;
 }
 
 .flex_item_weather_picture {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
 
-	justify-content: flex-start;
-	align-items: flex-end;
+    justify-content: flex-start;
+    align-items: flex-end;
 
-	width: 100%;
-	height: 441px;
+    width: 100%;
+    height: 441px;
 
-	background-image: url("/images/weather-states-imgs/sunny-muster-003.jpg");
-	background-repeat: no-repeat;
-	background-color: #7fc1ff;
+    background-image: url("/images/weather-states-imgs/sunny-muster-003.jpg");
+    background-repeat: no-repeat;
+    background-color: #7fc1ff;
 }
 
 .content_weather_city {
-	display: block;
+    display: block;
 
-	padding-left: 50px;
+    padding-left: 50px;
 
-	width: auto;
-	height: 75px;
+    width: auto;
+    height: 75px;
 
-	text-align: left;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 300;
-	color: #000;
-	font-size: 2.625em;
-	text-transform: uppercase;
-	letter-spacing: 1.3px;
-	text-decoration: none;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #000;
+    font-size: 2.625em;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    text-decoration: none;
 }
 
 .flex_item_weather_data {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
 
-	justify-content: center;
-	align-items: flex-start;
+    justify-content: center;
+    align-items: flex-start;
 
-	width: 100%;
-	height: auto;
+    width: 100%;
+    height: auto;
 
-	background-color: #7fc1ff;
+    background-color: #7fc1ff;
+
+    /* border: coral;
+    border-color: rgb(200, 220, 20);
+    border-style: solid;
+    border-width: 01px; */
 }
 
 .flex_item_instruments {
-	display: none;
-	flex-direction: row;
-	align-items: center;
+    display: none;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-around;
-    
+
     flex-wrap: wrap;
 
-	width: 572px;
-	height: auto;
+    width: 572px;
+    height: auto;
 }
 
 .flex_item_instruments--visible {
-	display: flex;
+    display: flex;
 }
 
 .flex_instrument_01 {
-	display: flex;
-	justify-content: center;
-	-ms-flex-align: center;
-	-webkit-align-items: center;
-	-webkit-box-align: center;
-	align-items: center;
-	width: 190px;
-	height: 190px;
-	background-image: url("/images/instruments/instrument-011.png");
-	background-repeat: no-repeat;
-	background-color: #7fc1ff;
+    display: flex;
+    justify-content: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    align-items: center;
+    width: 190px;
+    height: 190px;
+    background-image: url("/images/instruments/instrument-011.png");
+    background-repeat: no-repeat;
+    background-color: #7fc1ff;
 }
 
-.container i {
-	padding: 20px;
-	display: block;
-	font-size: 5em;
-	transition: all 0.4s ease;
+/* .container i {
+    padding: 20px;
+    display: block;
+    font-size: 5em;
+    transition: all 0.4s ease;
     color: #3e497d;
-}
+} */
 
 .flex_instrument_02 {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	width: 190px;
-	height: 190px;
-	background-image: url("/images/instruments/instrument-022.png");
-	background-repeat: no-repeat;
-	background-color: #7fc1ff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 190px;
+    height: 190px;
+    background-image: url("/images/instruments/instrument-022.png");
+    background-repeat: no-repeat;
+    background-color: #7fc1ff;
 }
 
 .flex_instrument_03 {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	width: 190px;
-	height: 190px;
-	background-image: url("/images/instruments/instrument-033.png");
-	background-repeat: no-repeat;
-	background-color: #7fc1ff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 190px;
+    height: 190px;
+    background-image: url("/images/instruments/instrument-033.png");
+    background-repeat: no-repeat;
+    background-color: #7fc1ff;
 }
 
 .flex_item_text_box {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
-	justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
 
-	background-color: #7fc1ff;
+    background-color: #7fc1ff;
 
-	width: 100%;
-	max-height: 100%;
+    width: 100%;
+    max-height: 100%;
 }
 
 .flex_item_text {
-	width: 300px;
-	background-color: #7fc1ff;
+    width: 300px;
+    background-color: #7fc1ff;
 
-	font-family: "Source Sans Pro";
-	color: #343434;
-	padding-bottom: 15px;
+    font-family: "Source Sans Pro";
+    color: #343434;
+    padding-bottom: 15px;
 }
 
 .title {
-	font-weight: bold;
-	font-style: normal;
-	font-family: "Source Sans Pro";
-	text-align: center;
-	color: #FFFFFF;
-	letter-spacing: 2px;
+    font-weight: bold;
+    font-style: normal;
+    font-family: "Source Sans Pro";
+    text-align: center;
+    color: #FFFFFF;
+    letter-spacing: 2px;
 }
 
 .placeholder {
-	width: 572px;
-	height: auto;
+    width: 572px;
+    height: auto;
 }
 
 .placeholder-right-side {
-	width: 70px;
-	height: 768px;
+    width: 70px;
+    height: 768px;
 }
 
 body {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 50px;
-	margin-left: 0px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 50px;
+    margin-left: 0px;
 
-	background-image: url("/images/bg_main_muster.jpg");
-	background-repeat: repeat;
-	background-color: #98c4e8;
+    background-image: url("/images/bg_main_muster.jpg");
+    background-repeat: repeat;
+    background-color: #98c4e8;
+    line-height: 1;
 }
 
 /*
