--- a/04.18.19/homework/weather/css/css.css
+++ b/04.18.19/homework/weather/css/css.css
@@ -156,7 +156,8 @@ div {
     border: 1px solid #ffffff;
 }
 
-#menu-cities {
+.menu-proposed-cities {
+    display: none;
     margin-top: 2px;
     position: absolute;
     background: #fff;
@@ -164,7 +165,15 @@ div {
     /* width: 212px; */
 }
 
-#menu-cities ul.menu-items li.title {
+.menu-proposed-cities--visible {
+    display: block;
+    margin-top: 2px;
+    position: absolute;
+    background: #fff;
+    z-index: 9900;
+}
+
+#menu-proposed-cities ul.menu-items li.title {
 
     color: #00afbe;
     text-transform: uppercase;
@@ -176,7 +185,7 @@ div {
     border-bottom: none;
 }
 
-#menu-cities ul.menu-items li a {
+#menu-proposed-cities ul.menu-items li a {
 
     display: block;
     color: #141d26;
@@ -211,12 +220,12 @@ ol, ul {
     padding: 0;
 }
 
-#menu-cities ul.menu-items {
+#menu-proposed-cities ul.menu-items {
 
     border: 1px solid #c8c8c8;
 }
 
-#menu-cities ul.menu-items li {
+#menu-proposed-cities ul.menu-items li {
     border-bottom: 1px solid #eae9e8;
     padding: 0;
 }
