menu proposed cities rev

--- a/04.18.19/homework/weather/css/css.css
+++ b/04.18.19/homework/weather/css/css.css
@@ -190,9 +190,9 @@ div {
     display: block;
     color: #141d26;
     padding: 12px;
-        padding-right: 12px;
-    padding-right: 75px;
+    padding-right: 132px;
     position: relative;
+    margin-left: 50px;
 }
 
 a {
