--- a/04.18.19/homework/weather/css/css.css
+++ b/04.18.19/homework/weather/css/css.css
@@ -6,12 +6,13 @@ canvas {
 }
 
 .contentwrap {
-    /*     
-    border-color: blueviolet;
-    border-style: solid;
-    border-width: 01px; */
-}
 
+    margin-top: 25px;
+
+    /* border-color: blueviolet;
+    border-style: solid;
+    border-width: 1px; */
+}
 .contentwrap:after {
     display: block;
     clear: both;
@@ -63,8 +64,8 @@ canvas {
 .input__field {
     text-decoration: none;
     text-transform: uppercase;
-    /*
-    margin: 0em 0em 0em 0.5em; */
+    
+    margin: 0em 0em 0em 0em;
     padding: 0.5em 0.5em 0.5em 0.5em;
 
     border-radius: 0.1em;
@@ -73,7 +74,7 @@ canvas {
     color: #FFFFFF;
     background-color: #1e5372;
     text-align: left;
-    width: 194px;
+    width: 270px;
 }
 
 .input__field:hover {
@@ -137,7 +138,7 @@ canvas {
 div {
     font-family: helvetica,arial,sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 0.5em 0.5em 0.5em 0.5em;
 }
 
 .button {
